메인로직 리팩토링